# librcsc

./: .clang-format  .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile.in  Makefile.am  NEWS  NEWS.en  README  README.md  bootstrap  cmake-config.h.in  configure.ac  librcsc-config.in  librcsc.pc.in  librcsc.spec.in  librcscenv.in  reconfig.sh
example/: Makefile.am  gzifstream_main.cpp  gzofstream_main.cpp  loader_main.cpp  param_main.cpp  rcssserver-player.conf  rcssserver-server.conf  result_writer.cpp  result_writer.h  result_writer_main.cpp  sample.out  test.conf
rcsc/: CMakeLists.txt  Makefile.am  csv_logger.h  factory.h  game_mode.h  game_time.h  geom.h  gz.h  math_util.h  random.h  rcg.h  rcsc.h  rcsc.pro  soccer_math.h  timer.h  types.h  version.h
rcsc/action/: CMakeLists.txt  Makefile.am  arm_off.h  arm_point_to_point.h  basic_actions.cpp  basic_actions.h  bhv_before_kick_off.cpp  bhv_before_kick_off.h  bhv_body_neck_to_ball.h  bhv_body_neck_to_point.h  bhv_emergency.cpp  bhv_emergency.h  bhv_go_to_point_look_ball.cpp  bhv_go_to_point_look_ball.h  bhv_neck_body_to_ball.h  bhv_neck_body_to_point.h  bhv_scan_field.cpp  bhv_scan_field.h  bhv_shoot.h  bhv_shoot2008.cpp  bhv_shoot2008.h  body_advance_ball.h  body_advance_ball2009.cpp  body_advance_ball2009.h  body_clear_ball.h  body_clear_ball2009.cpp  body_clear_ball2009.h  body_dribble.h  body_dribble2008.cpp  body_dribble2008.h  body_go_to_point.cpp  body_go_to_point.h  body_go_to_point2009.cpp  body_go_to_point2010.cpp  body_go_to_point2010.h  body_go_to_point_dodge.cpp  body_go_to_point_dodge.h  body_hold_ball.h  body_hold_ball2008.cpp  body_hold_ball2008.h  (+51 more)
rcsc/ann/: CMakeLists.txt  Makefile.am  bpn1.h  ngnet.cpp  ngnet.h  rbf.cpp  rbf.h  sirm.cpp  sirm.h  sirms_model.cpp  sirms_model.h
rcsc/clang/: CMakeLists.txt  Makefile.am  clang.h  clang_action.cpp  clang_action.h  clang_condition.cpp  clang_condition.h  clang_directive.cpp  clang_directive.h  clang_info_message.cpp  clang_info_message.h  clang_message.h  clang_parser.cpp  clang_parser.h  clang_token.cpp  clang_token.h  clang_unum.cpp  clang_unum.h  coach_lang_grammer.txt  test_clang_parser.cpp  types.h
rcsc/coach/: CMakeLists.txt  Makefile.am  clang_manager.cpp  clang_manager.h  coach_agent.cpp  coach_agent.h  coach_audio_sensor.cpp  coach_audio_sensor.h  coach_ball_object.cpp  coach_ball_object.h  coach_command.cpp  coach_command.h  coach_config.cpp  coach_config.h  coach_debug_client.cpp  coach_debug_client.h  coach_intercept_predictor.cpp  coach_intercept_predictor.h  coach_player_object.cpp  coach_player_object.h  coach_visual_sensor.cpp  coach_visual_sensor.h  coach_world_model.cpp  coach_world_model.h  coach_world_state.cpp  coach_world_state.h  cycle_data.cpp  cycle_data.h  player_change_state.cpp  player_change_state.h  player_type_analyzer.cpp  player_type_analyzer.h  soccer_adviser.h
rcsc/color/: CMakeLists.txt  Makefile.am  gradation_color_provider.cpp  gradation_color_provider.h  gray_scale_provider.cpp  gray_scale_provider.h  rgb_color.cpp  rgb_color.h  thermo_color_provider.cpp  thermo_color_provider.h  thermo_color_test.cpp
rcsc/common/: CMakeLists.txt  Makefile.am  abstract_client.cpp  abstract_client.h  audio_codec.cpp  audio_codec.h  audio_memory.cpp  audio_memory.h  audio_message.h  free_message_parser.h  freeform_message.h  freeform_message_parser.h  logger.cpp  logger.h  offline_client.cpp  offline_client.h  online_client.cpp  online_client.h  player_param.cpp  player_param.h  player_type.cpp  player_type.h  say_message.h  say_message_parser.cpp  say_message_parser.h  server_param.cpp  server_param.h  soccer_agent.cpp  soccer_agent.h  soccer_condition.cpp  soccer_condition.h  stamina_model.cpp  stamina_model.h  team_graphic.cpp  team_graphic.h
rcsc/formation/: CMakeLists.txt  Makefile.am  formation.cpp  formation.h  formation_bpn.cpp  formation_bpn.h  formation_cdt.cpp  formation_cdt.h  formation_data.cpp  formation_data.h  formation_dt.cpp  formation_dt.h  formation_knn.cpp  formation_knn.h  formation_ngnet.cpp  formation_ngnet.h  formation_parser.cpp  formation_parser.h  formation_parser_csv.cpp  formation_parser_csv.h  formation_parser_json.cpp  formation_parser_json.h  formation_parser_static.cpp  formation_parser_static.h  formation_parser_v1.cpp  formation_parser_v1.h  formation_parser_v2.cpp  formation_parser_v2.h  formation_parser_v3.cpp  formation_parser_v3.h  formation_rbf.cpp  formation_rbf.h  formation_sbsp.cpp  formation_sbsp.h  formation_static.cpp  formation_static.h  formation_uva.cpp  formation_uva.h  formation_writer.cpp  formation_writer.h  (+6 more)
rcsc/geom/: CMakeLists.txt  Makefile.am  angle_deg.cpp  angle_deg.h  circle_2d.cpp  circle_2d.h  composite_region_2d.cpp  composite_region_2d.h  convex_hull.cpp  convex_hull.h  delaunay_triangulation.cpp  delaunay_triangulation.h  line_2d.cpp  line_2d.h  matrix_2d.cpp  matrix_2d.h  polygon_2d.cpp  polygon_2d.h  ray_2d.cpp  ray_2d.h  rect_2d.cpp  rect_2d.h  region_2d.h  sector_2d.cpp  sector_2d.h  segment_2d.cpp  segment_2d.h  segment_intersection.cpp  segment_intersection.h  size_2d.h  test_convex_hull.cpp  test_matrix_2d.cpp  test_polygon_2d.cpp  test_qhull_delaunay.cpp  test_qhull_voronoi.cpp  test_rect_2d.cpp  test_rundom_convex_hull.cpp  test_segment_2d.cpp  test_triangle_2d.cpp  test_vector_2d.cpp  (+11 more)
rcsc/gz/: CMakeLists.txt  Makefile.am  gzcompressor.cpp  gzcompressor.h  gzfilterstream.cpp  gzfilterstream.h  gzfstream.cpp  gzfstream.h
rcsc/monitor/: CMakeLists.txt  Makefile.am  monitor_command.cpp  monitor_command.h
rcsc/net/: CMakeLists.txt  Makefile.am  abstract_socket.cpp  abstract_socket.h  basic_socket.cpp  basic_socket.h  host_address.cpp  host_address.h  tcp_socket.cpp  tcp_socket.h  udp_socket.cpp  udp_socket.h
rcsc/param/: CMakeLists.txt  Makefile.am  cmd_line_parser.cpp  cmd_line_parser.h  ini_file.cpp  (+8 more)
src/: CMakeLists.txt  Makefile.am  object_table_printer.cpp  rcg2csv.cpp  rcg2txt.cpp  rcg3to4.in  rcg4to3.in  rcgrenameteam.cpp  rcgreverse.cpp  rcgvalidator.cpp  rcgverconv.cpp  rcgversion.cpp  resultprinter.cpp  scheduler.cpp  tableprinter.cpp
(+193 files in other folders)
